// This contains protobuf types in pair with ClairCore's types, with
// minimal differences. See https://github.com/quay/claircore for comments
// on the fields.

edition = "2023";  // successor to proto2 and proto3

package scanner.v4;
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/scanner/v4;v4";
option features.(pb.go).api_level = API_OPAQUE;

message Contents {
  repeated Package packagesDEPRECATED = 1 [deprecated = true];
  map<string, Package> packages = 5 [lazy = true];
  repeated Distribution distributionsDEPRECATED = 2 [deprecated = true];
  map<string, Distribution> distributions = 6 [lazy = true];
  repeated Repository repositoriesDEPRECATED = 3 [deprecated = true];
  map<string, Repository> repositories = 7 [lazy = true];
  map<string, Environment.List> environmentsDEPRECATED = 4 [deprecated = true];
  map<string, Environment.List> environments = 8 [lazy = true];
}

message Package {
  string id = 1;
  string name = 2;
  string version = 3;
  NormalizedVersion normalized_version = 4;
  string fixed_in_version = 5;
  string kind = 6;
  Package source = 7;
  string package_db = 8;
  string repository_hint = 9;
  string module = 10;
  string arch = 11;
  string cpe = 12;
}

message NormalizedVersion {
  string kind = 1;
  repeated int32 v = 2;
}

message Distribution {
  string id = 1;
  string did = 2;
  string name = 3;
  string version = 4;
  string version_code_name = 5;
  string version_id = 6;
  string arch = 7;
  string cpe = 8;
  string pretty_name = 9;
}

message Repository {
  string id = 1;
  string name = 2;
  string key = 3;
  string uri = 4;
  string cpe = 5;
}

// Environment describes the surrounding environment a package was
// discovered in.
message Environment {
  message List {
    repeated Environment environments = 1 [lazy = true];
  }
  string package_db = 1;
  string introduced_in = 2;
  string distribution_id = 3;
  repeated string repository_ids = 4;
}
